--- a/frontend/templates/themes_admin/themes_gestionnaire/homepage_ges.html
+++ b/frontend/templates/themes_admin/themes_gestionnaire/homepage_ges.html
@@ -73,48 +73,48 @@
                 
 
                 <div class="card">
-                    <div class="card-header" id="headingThree">
+                    <div class="card-header" id="headingFourteen">
                         <h2>
                             <button class="btn btn-link btn-block text-left collapsed" type="button"
-                                data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-                                aria-controls="collapseThree">
-                                <a class="option-name"><i class="fas fa-capsules"></i><span
-                                        style="margin-left:4px;">Liste des commandes</span></a>
+                                data-toggle="collapse" data-target="#collapseFourteen" aria-expanded="false"
+                                aria-controls="collapseFourteen">
+                                <a class="option-name"><i class="fas fa-user-md" aria-hidden="true"
+                                        style="margin-left: 3px;"></i><span style="margin-left: 5px;">Utilisateur</span></a>
                             </button>
                         </h2>
                     </div>
-                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                    <div id="collapseFourteen" class="collapse" aria-labelledby="headingFourteen"
                         data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="{% url 'afficher_medicaments_selectionnes' %}">Commandes en cours</a></li>
-                                <li><a href="{% url 'caissier_commandes_validees' %}">Commandes validées</a></li>
+                                <li><a href="#">Création de compte</a></li>
+                                <li><a href="#">Liste Utilisateurs</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
                 <div class="card">
-                    <div class="card-header" id="headingFour">
+                    <div class="card-header" id="headingFiveteen">
                         <h2>
                             <button class="btn btn-link btn-block text-left collapsed" type="button"
-                                data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
-                                aria-controls="collapseFour">
-                                <a class="option-name"><i class="fas fa-capsules"></i><span
-                                        style="margin-left:4px;">Livraison</span></a>
+                                data-toggle="collapse" data-target="#collapseFiveteen" aria-expanded="false"
+                                aria-controls="collapseFiveteen">
+                                <a class="option-name"><i class="fa fa-file-text-o" aria-hidden="true"
+                                        style="margin-left: 5px;"></i><span style="margin-left: 5px;">Rapport</span></a>
                             </button>
                         </h2>
                     </div>
-                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+                    <div id="collapseFiveteen" class="collapse" aria-labelledby="headingFiveteen"
                         data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="#">Livreur</a></li>
-                                <li><a href="#">Commandes livrées</a></li>
+                                <li><a href="#">Invoices Report</a></li>
+                                <li><a href="#">Return Invoices Report</a></li>
                             </ul>
                         </div>
                     </div>
-                </div> 
+                </div>
                 
                 <div class="card">
                     <div class="card-header" id="headingSixteen">
