--- a/frontend/templates/themes_admin/notification_date_expired.html
+++ b/frontend/templates/themes_admin/notification_date_expired.html
@@ -17,46 +17,49 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        Expired Medicine
+                        Medicament à expiration proche
                     </div>
                 </div>
+                {% if medicaments %}
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-7 col-md-10">
+                            {% for medicament in medicaments %}
                             <table class="table table-striped table-bordered dt-responsive ">
                                 <tbody>
                                     <tr>
-                                        <th scope="col">Batch Id</th>
-                                        <td>3</td>
+                                        <th scope="col">Nom du Médicament</th>
+                                        <td>{{medicament.nomMedicament}}</td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Product Name</th>
-                                        <td>Paracetamol</td>
+                                        <th scope="col">Quantité en stock</th>
+                                        <td>{{medicament.stock}}</td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Product Quantity</th>
-                                        <td>200</td>
+                                        <th scope="col">Prix Unitaire</th>
+                                        <td>{{medicament.prixUnitaire}} FCFA</td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Production Date</th>
-                                        <td>10/5/2021</td>
+                                        <th scope="col">Date d'expiration</th>
+                                        <td style="color:red"><strong>{{medicament.dateExpiration}}</strong></td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Warehouse</th>
-                                        <td>war3</td>
+                                        <th scope="col">Code Générique</th>
+                                        <td>{{medicament.code}}</td>
                                     </tr>
-                                </tbody>
+                                    </tbody>
                             </table>
-                            <div class="row d-flex justify-content-end">
-                                <button class="btn btn-success float-right"><i class="fas fa-history"></i>&nbsp; Return</button>
-                                <button class="btn btn-danger float-right"><i class="fas fa-prescription-bottle-alt"></i>&nbsp; Spoliation</button>
-                            </div>
                         </div>
                         <div class="col-lg-4 d-none d-xl-block d-lg-block">
-                            <img src="{% static 'themes_admin/img/notification.jpg' %}" class="img-thumbnail">
+                            <img src="{{medicament.image.url}}" class="img-thumbnail" alt="{{medicament.nomMedicament}}">
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
+                {%elif not medicaments %}
+                    <h3> Aucun médicament à réapprovisionnement proche</h3>
+                {% endif %}
+
             </div>
         </div>
     </div>
