--- a/frontend/templates/themes_admin/notification_out_of_stock.html
+++ b/frontend/templates/themes_admin/notification_out_of_stock.html
@@ -16,33 +16,36 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        Out Of Stock Medicine
+                        Medicament à réapprovisionner
                     </div>
                 </div>
+                {% if medicaments %}
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-7 col-md-10">
+                            {% for medicament in medicaments %}
                             <table class="table table-out table-striped table-bordered dt-responsive ">
                                 <tbody>
+                                    
                                     <tr>
-                                        <th scope="col">Batch Id</th>
-                                        <td>3</td>
+                                        <th scope="col">Nom du Médicament</th>
+                                        <td>{{medicament.nomMedicament}}</td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Product Name</th>
-                                        <td>Paracetamol</td>
+                                        <th scope="col">Quantité en stock</th>
+                                        <td style="color:red"><strong>{{medicament.stock}}</strong></td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Product Quantity</th>
-                                        <td>200</td>
+                                        <th scope="col">Prix Unitaire</th>
+                                        <td>{{medicament.prixUnitaire}} FCFA</td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Production Date</th>
-                                        <td>10/5/2021</td>
+                                        <th scope="col">Date d'expiration</th>
+                                        <td>{{medicament.dateExpiration}}</td>
                                     </tr>
                                     <tr>
-                                        <th scope="col">Warehouse</th>
-                                        <td>war3</td>
+                                        <th scope="col">Code Générique</th>
+                                        <td>{{medicament.code}}</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -52,10 +55,12 @@
                             </div> -->
                         </div>
                         <div class="col-lg-4 d-none d-xl-block d-lg-block ">
-                            <img src="{% static 'themes_admin/img/out_of_stock.jpg' %}" class="img-thumbnail out">
+                            <img src="{{medicament.image.url}}" class="img-thumbnail out" alt="{{medicament.nomMedicament}}">
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
