--- a/frontend/templates/themes_admin/inscription.html
+++ b/frontend/templates/themes_admin/inscription.html
@@ -1,70 +1,12 @@
+{% extends "themes_admin/themes_gestionnaire/homepage_ges.html" %}
+{% block content %}
+
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="{% static 'themes_admin/font/icon.js' %}" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'themes_admin/css/bootstrap.min.css'%}">
-    <script src="{% static 'themes_admin/js/popper.min.js'%}"></script>
     <link rel="stylesheet" href="{% static 'themes_admin/css/master.css' %}">
     <link rel="stylesheet" href="{% static 'themes_admin/css/login.css' %}">
     <title>PharmApp</title>
     <link rel="icon" href="{% static 'themes_client/images/logo.jpg' %}" sizes="64x64 128x128" type="image/jpg">
 
-    <style>
-        /* Center body-page */
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 150px;
-        }
-        .body-page {
-            width: 75%; /* Adjust this percentage as needed */
-        }
-
-        /* Hover effect for the form */
-        .body-page {
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .body-page:hover {
-            transform: scale(1.02);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .mb-3 {
-            font-weight: bold;
-            font-size: 30px;
-        }
-        .login .col-lg-6 {
-            margin-top: 15px;
-        }
-        /* Custom CSS for aligning the button and paragraph to the left */
-        .align-left {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-        }
-        .align-left .btn {
-            margin-bottom: 10px;
-            margin-left: 35px;
-        }
-        .align-left p {
-            margin-left: 0;
-        }
-        .btn-info{
-            font-size: 15px !important;
-            background-color: #03BB00;
-            background-size: 6px !important;
-        }
-    </style>
-</head>
-<body>
-    <!-- Start Body -->
     <div class="body-page" id="body-page">
         <div class="login">
             <div class="card">
@@ -74,7 +16,7 @@
                             <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-thumbnail" style="margin-top: 150px;">
                         </div>                        
                         <div class="col-lg-6">
-                            <h1 class="mb-3">Inscription</h1>
+                            <h1 class="mb-3">Création des comptes utilisateurs</h1>
                             <form method="post" action="{% url 'inscription' %}">
                                 {% csrf_token %}
                                 <div class="form-group">
@@ -105,10 +47,6 @@
                                     <label for="id_role">Rôle</label>
                                     {{ form.role }}
                                 </div>
-                                <div class="align-left">
-                                    <button type="submit" class="btn btn-info">S'inscrire</button>
-                                    <p class="text-center">Vous avez déjà un compte ? <a href="{% url 'page_connexion' %}">Connectez-vous ici</a></p>
-                                </div>
                             </form>
                         </div>
                     </div>
@@ -116,9 +54,4 @@
             </div>
         </div>
     </div>
-    <!-- End Body -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
